--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,22 +1,38 @@
-buildscript{
+buildscript {
     repositories {
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
-    dependencies{
+    dependencies {
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE'
+        classpath 'com.google.cloud.tools:appengine-gradle-plugin:1.3.5'
+        classpath "gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.19.2"
     }
 }
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'idea'
+apply plugin: 'com.google.cloud.tools.appengine-flexible'
+apply plugin: 'com.palantir.docker'
 
 repositories {
     mavenCentral()
 }
 
-dependencies{
-    compile 'org.springframework.boot:spring-boot-starter-web:2.0.2.RELEASE'
-    compile project(':serviceapi')
-    compile project(':repositoryapi')
-    compile project(':service')
+dependencies {
+    compile('org.springframework.boot:spring-boot-starter-web:2.0.2.RELEASE')
+    compile('javax.xml.bind:jaxb-api:2.3.0')
+    compile project(':service.api')
+    compile project(':repository.api')
+    compile project(':service.impl')
     compile project(':web')
+}
+
+docker {
+    dependsOn build
+    name "${project.group}/${bootJar.baseName}"
+    files bootJar.archivePath
+    buildArgs(['JAR_FILE': "${bootJar.archiveName}"])
 }
