--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'nightmanager'
 
-include ':serviceapi'
-include ':repositoryapi'
+include ':service.api'
+include ':repository.api'
 include ':web'
 include ':application'
-include ':service'
+include ':service.impl'
