--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'idea'
 
 repositories {
     mavenCentral()
@@ -7,5 +8,5 @@ repositories {
 dependencies{
     compile 'org.springframework:spring-webmvc:5.0.6.RELEASE'
     compile 'org.springframework:spring-web:5.0.6.RELEASE'
-    compile project(':serviceapi')
+    compile project(':service.api')
 }
