--- a/application/src/main/appengine/app.yaml
+++ b/application/src/main/appengine/app.yaml
@@ -1,5 +1,5 @@
 service: sb-gcp
 env: flex
-runtime: custom   # Java runtime
+runtime: java   # Java runtime
 runtime_config:
   jdk: openjdk8 # use OpenJDK 8
