--- a/repository.api/build.gradle
+++ b/repository.api/build.gradle
@@ -7,5 +7,5 @@ repositories {
 
 dependencies{
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.2.RELEASE'
-    compile 'mysql:mysql-connector-java:8.0.11'
+    compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
 }
