make whole thing work

--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -33,3 +33,7 @@ docker {
     files bootJar.archivePath
     buildArgs(['JAR_FILE': "${bootJar.archiveName}"])
 }
+
+processResources{
+    from "$projectDir/../nightmanager.client/dist/nightmanager" into "public" include "*"
+}
