--- a/nightmanager.client/tsconfig.json
+++ b/nightmanager.client/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist/nightmanager",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
