--- a/nightmanager.server/src/main/resources/application.properties
+++ b/nightmanager.server/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgres://35.234.103.1:5432/nightmanager
+spring.datasource.url=jdbc:postgresql://localhost:5432/nightmanager
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
