--- a/nightmanager.client/package.json
+++ b/nightmanager.client/package.json
@@ -25,6 +25,7 @@
     "@auth0/angular-jwt": "^2.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.11",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -35,6 +36,7 @@
     "@angular/language-service": "^6.1.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.116",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
