--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security:2.0.2.RELEASE'
     compile 'com.google.guava:guava:27.0-jre'
     compile("io.jsonwebtoken:jjwt:0.9.0")
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
 }
 
 docker {
