--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.2.RELEASE'
     compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
     compile 'org.springframework.boot:spring-boot-starter-security:2.0.2.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-logging:jar:2.0.2.RELEASE'
     compile 'com.google.guava:guava:27.0-jre'
     compile("io.jsonwebtoken:jjwt:0.9.0")
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
