small bug fixing

--- a/nightmanager.server/src/main/resources/application.properties
+++ b/nightmanager.server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/nightmanager
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://aa18u2ne071eklc.col8r7qvtrlh.eu-central-1.rds.amazonaws.com:5432/ebdb
+spring.datasource.username=nightmanager
+spring.datasource.password=2MhOLEq4em5b8t0H
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-server.port=8080
+server.port=5000
