--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -24,7 +24,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web:2.0.2.RELEASE')
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.2.RELEASE'
-    compile 'org.postgresql:postgresql:9.4-1206-jdbc42'
+    compile 'com.microsoft.sqlserver:mssql-jdbc:7.0.0.jre8'
     compile 'org.springframework.boot:spring-boot-starter-security:2.0.2.RELEASE'
     compile 'com.google.guava:guava:27.0-jre'
     compile("io.jsonwebtoken:jjwt:0.9.0")
