* angular 7 * mssql data

--- a/nightmanager.server/src/main/resources/application.properties
+++ b/nightmanager.server/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=nightmanager
 spring.datasource.username=nightmanager
 spring.datasource.password=nightmanager
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.data=classpath:/sql/data_night.sql
+spring.datasource.initialization-mode=always
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
