add role based security

--- a/nightmanager.server/src/main/resources/application.properties
+++ b/nightmanager.server/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=nightmanager
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.data=classpath:/sql/data_night.sql
 spring.datasource.initialization-mode=always
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 server.port=8080
