build angular in prod mode

--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -36,5 +36,5 @@ processResources {
 
 task buildAngular(type: Exec) {
     workingDir "../nightmanager.client/"
-    commandLine "ng.cmd", "build"
+    commandLine "ng.cmd", "build", "--prod"
 }
