--- a/nightmanager.client/package.json
+++ b/nightmanager.client/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve --proxy-config proxy.conf.json",
-        "build": "ng build",
+        "build": "ng build --prod",
         "pree2e": "webdriver-manager update --versions.chrome=2.36 --standalone false --gecko false",
         "e2e": "echo no e2e tests",
         "lint": "ng lint"
