--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -20,6 +20,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web:2.0.2.RELEASE')
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.2.RELEASE'
+    compile 'org.springframework.boot:spring-aop'
     compile 'com.microsoft.sqlserver:mssql-jdbc:7.0.0.jre8'
     compile 'org.springframework.boot:spring-boot-starter-security:2.0.2.RELEASE'
     compile 'com.google.guava:guava:27.0-jre'
