--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -7,12 +7,18 @@ buildscript {
     }
     dependencies {
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE'
+        classpath "gradle.plugin.com.heroku.sdk:heroku-gradle:1.0.4"
     }
 }
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'idea'
+apply plugin: "com.heroku.sdk.heroku-gradle"
 
+heroku {
+    appName = "nighmanagerapp"
+    buildpacks = ["heroku/jvm"]
+}
 repositories {
     mavenCentral()
 }
