--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.internal.os.OperatingSystem;
+
 buildscript {
     repositories {
         mavenCentral()
@@ -7,18 +9,12 @@ buildscript {
     }
     dependencies {
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE'
-        classpath "gradle.plugin.com.heroku.sdk:heroku-gradle:1.0.4"
     }
 }
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'idea'
-apply plugin: "com.heroku.sdk.heroku-gradle"
 
-heroku {
-    appName = "nighmanagerapp"
-    buildpacks = ["heroku/jvm"]
-}
 repositories {
     mavenCentral()
 }
@@ -26,7 +22,6 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web:2.0.2.RELEASE')
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.2.RELEASE'
-    compile 'org.springframework.boot:spring-aop'
     compile 'com.microsoft.sqlserver:mssql-jdbc:7.0.0.jre8'
     compile 'org.springframework.boot:spring-boot-starter-security:2.0.2.RELEASE'
     compile 'com.google.guava:guava:27.0-jre'
@@ -41,7 +36,28 @@ processResources {
     }
 }
 
-task buildAngular(type: Exec) {
-    workingDir "../nightmanager.client/"
-    commandLine "ng.cmd", "build", "--prod"
+task buildAngular() {
+	if (OperatingSystem.current().isLinux()) {
+	    doLast {
+		exec {
+		    workingDir "../nightmanager.client/"
+            commandLine "npm", "install"
+        }
+		exec {
+		    workingDir "../nightmanager.client/"
+			commandLine "ng", "build", "--prod"
+		}
+		}
+    }else {
+		doLast {
+	    exec {
+		    workingDir "../nightmanager.client/"
+            commandLine "npm.cmd", "install"
+        }
+		exec {
+		    workingDir "../nightmanager.client/"
+			commandLine "ng.cmd", "build", "--prod"
+		}
+		}
+	}
 }
