--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -22,7 +22,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web:2.0.2.RELEASE')
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.2.RELEASE'
-    compile 'com.microsoft.sqlserver:mssql-jdbc:7.0.0.jre8'
+    compile 'org.postgresql:postgresql:42.2.0'
     compile 'org.springframework.boot:spring-boot-starter-security:2.0.2.RELEASE'
     compile 'com.google.guava:guava:27.0-jre'
     compile("io.jsonwebtoken:jjwt:0.9.0")
@@ -37,27 +37,27 @@ processResources {
 }
 
 task buildAngular() {
-	if (OperatingSystem.current().isLinux()) {
-	    doLast {
-		exec {
-		    workingDir "../nightmanager.client/"
-            commandLine "npm", "install"
+    if (OperatingSystem.current().isLinux()) {
+        doLast {
+            exec {
+                workingDir "../nightmanager.client/"
+                commandLine "npm", "install"
+            }
+            exec {
+                workingDir "../nightmanager.client/"
+                commandLine "ng", "build", "--prod"
+            }
         }
-		exec {
-		    workingDir "../nightmanager.client/"
-			commandLine "ng", "build", "--prod"
-		}
-		}
-    }else {
-		doLast {
-	    exec {
-		    workingDir "../nightmanager.client/"
-            commandLine "npm.cmd", "install"
+    } else {
+        doLast {
+            exec {
+                workingDir "../nightmanager.client/"
+                commandLine "npm.cmd", "install"
+            }
+            exec {
+                workingDir "../nightmanager.client/"
+                commandLine "ng.cmd", "build", "--prod"
+            }
         }
-		exec {
-		    workingDir "../nightmanager.client/"
-			commandLine "ng.cmd", "build", "--prod"
-		}
-		}
-	}
+    }
 }
