--- a/nightmanager.server/src/main/resources/application.properties
+++ b/nightmanager.server/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=nightmanager
-spring.datasource.username=nightmanager
-spring.datasource.password=nightmanager
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:postgresql://localhost:5432/nightmanager
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.data=classpath:/sql/data_night.sql
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
