--- a/nightmanager.server/build.gradle
+++ b/nightmanager.server/build.gradle
@@ -20,10 +20,10 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web:2.0.2.RELEASE')
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.2.RELEASE'
-    compile 'org.postgresql:postgresql:42.2.0'
-    compile 'org.springframework.boot:spring-boot-starter-security:2.0.2.RELEASE'
+    compile('org.springframework.boot:spring-boot-starter-web:2.2.1.RELEASE')
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.2.1.RELEASE'
+    implementation 'org.postgresql:postgresql:42.2.8'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.2.1.RELEASE'
     compile 'com.google.guava:guava:27.0-jre'
     compile("io.jsonwebtoken:jjwt:0.9.0")
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
