--- a/nightmanager.server/src/main/resources/application.properties
+++ b/nightmanager.server/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 server.port=8080
+logging.level.root=debug
