--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -11,44 +11,43 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^7.1.3",
-        "@angular/cdk": "^7.1.1",
-        "@angular/common": "^7.1.3",
-        "@angular/compiler": "^7.1.3",
-        "@angular/core": "^7.1.3",
-        "@angular/forms": "^7.1.3",
-        "@angular/http": "^7.1.3",
-        "@angular/material": "^7.1.1",
-        "@angular/platform-browser": "^7.1.3",
-        "@angular/platform-browser-dynamic": "^7.1.3",
-        "@angular/router": "^7.1.3",
-        "@auth0/angular-jwt": "^2.1.0",
-        "bootstrap": "^4.1.3",
-        "core-js": "^2.6.0",
-        "lodash": "^4.17.11",
-        "rxjs": "^6.3.3",
-        "zone.js": "^0.8.26"
+        "@angular/animations": "^10.0.0",
+        "@angular/cdk": "^10.0.0",
+        "@angular/common": "^10.0.0",
+        "@angular/compiler": "^10.0.0",
+        "@angular/core": "^10.0.0",
+        "@angular/forms": "^10.0.0",
+        "@angular/material": "^10.0.0",
+        "@angular/platform-browser": "^10.0.0",
+        "@angular/platform-browser-dynamic": "^10.0.0",
+        "@angular/router": "^10.0.0",
+        "@auth0/angular-jwt": "^4.2.0",
+        "bootstrap": "^4.5.0",
+        "core-js": "^3.6.5",
+        "lodash": "^4.17.15",
+        "rxjs": "^6.6.0",
+        "zone.js": "^0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.11.3",
-        "@angular/cli": "~7.1.3",
-        "@angular/compiler-cli": "^7.1.3",
-        "@angular/language-service": "^7.1.3",
-        "@types/jasmine": "~3.3.1",
-        "@types/jasminewd2": "~2.0.6",
-        "@types/lodash": "^4.14.119",
-        "@types/node": "~10.12.14",
-        "codelyzer": "~4.5.0",
-        "jasmine-core": "~3.3.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "^3.1.3",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.4",
-        "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.0",
-        "protractor": "^5.4.1",
-        "ts-node": "~7.0.1",
-        "tslint": "~5.11.0",
-        "typescript": "~3.1.6"
+        "@angular-devkit/build-angular": "^0.1000.1",
+        "@angular/cli": "^10.0.0",
+        "@angular/compiler-cli": "^10.0.0",
+        "@angular/language-service": "^10.0.0",
+        "@types/jasmine": "^3.5.11",
+        "@types/jasminewd2": "^2.0.8",
+        "@types/lodash": "^4.14.157",
+        "@types/node": "^14.0.18",
+        "codelyzer": "^6.0.0",
+        "jasmine-core": "^3.5.0",
+        "jasmine-spec-reporter": "^5.0.2",
+        "karma": "^5.1.0",
+        "karma-chrome-launcher": "^3.1.0",
+        "karma-coverage-istanbul-reporter": "^3.0.3",
+        "karma-jasmine": "^3.3.1",
+        "karma-jasmine-html-reporter": "^1.5.4",
+        "protractor": "^7.0.0",
+        "ts-node": "^8.10.2",
+        "tslint": "^6.1.2",
+        "typescript": "^3.9.6"
     }
 }
