--- a/build.gradle
+++ b/build.gradle
@@ -8,26 +8,28 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE'
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.3.1.RELEASE'
         classpath "com.github.node-gradle:gradle-node-plugin:2.2.4"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.28.0"
     }
 }
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'idea'
 apply plugin: 'com.github.node-gradle.node'
+apply plugin: "com.github.ben-manes.versions"
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web:2.2.1.RELEASE')
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.2.1.RELEASE'
+    compile('org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE')
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.1.RELEASE'
     implementation 'org.postgresql:postgresql:42.2.8'
-    compile 'org.springframework.boot:spring-boot-starter-security:2.2.1.RELEASE'
-    compile 'com.google.guava:guava:27.0-jre'
-    compile("io.jsonwebtoken:jjwt:0.9.0")
+    compile 'org.springframework.boot:spring-boot-starter-security:2.3.1.RELEASE'
+    compile 'com.google.guava:guava:29.0-jre'
+    compile("io.jsonwebtoken:jjwt:0.9.1")
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
 }
 
