--- a/src/main/angular/angular.json
+++ b/src/main/angular/angular.json
@@ -30,7 +30,8 @@
             ],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/fonts"
             ],
             "styles": [
               "src/styles.scss"
