--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -1,53 +1,56 @@
 {
-    "name": "frontend",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve --proxy-config proxy.conf.json",
-        "build": "ng build --prod",
-        "pree2e": "webdriver-manager update --versions.chrome=2.36 --standalone false --gecko false",
-        "e2e": "echo no e2e tests",
-        "lint": "ng lint"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^10.0.0",
-        "@angular/cdk": "^10.0.0",
-        "@angular/common": "^10.0.0",
-        "@angular/compiler": "^10.0.0",
-        "@angular/core": "^10.0.0",
-        "@angular/forms": "^10.0.0",
-        "@angular/material": "^10.0.0",
-        "@angular/platform-browser": "^10.0.0",
-        "@angular/platform-browser-dynamic": "^10.0.0",
-        "@angular/router": "^10.0.0",
-        "@auth0/angular-jwt": "^4.2.0",
-        "bootstrap": "^4.5.0",
-        "core-js": "^3.6.5",
-        "lodash": "^4.17.15",
-        "rxjs": "^6.6.0",
-        "zone.js": "^0.10.3"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1000.1",
-        "@angular/cli": "^10.0.0",
-        "@angular/compiler-cli": "^10.0.0",
-        "@angular/language-service": "^10.0.0",
-        "@types/jasmine": "^3.5.11",
-        "@types/jasminewd2": "^2.0.8",
-        "@types/lodash": "^4.14.157",
-        "@types/node": "^14.0.18",
-        "codelyzer": "^6.0.0",
-        "jasmine-core": "^3.5.0",
-        "jasmine-spec-reporter": "^5.0.2",
-        "karma": "^5.1.0",
-        "karma-chrome-launcher": "^3.1.0",
-        "karma-coverage-istanbul-reporter": "^3.0.3",
-        "karma-jasmine": "^3.3.1",
-        "karma-jasmine-html-reporter": "^1.5.4",
-        "protractor": "^7.0.0",
-        "ts-node": "^8.10.2",
-        "tslint": "^6.1.2",
-        "typescript": "^3.9.6"
-    }
+  "name": "frontend",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build --prod",
+    "pree2e": "webdriver-manager update --versions.chrome=2.36 --standalone false --gecko false",
+    "e2e": "echo no e2e tests",
+    "lint": "ng lint",
+    "postinstall": "ngcc"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^10.0.0",
+    "@angular/cdk": "^10.0.0",
+    "@angular/common": "^10.0.0",
+    "@angular/compiler": "^10.0.0",
+    "@angular/core": "^10.0.0",
+    "@angular/forms": "^10.0.0",
+    "@angular/material": "^10.0.0",
+    "@angular/platform-browser": "^10.0.0",
+    "@angular/platform-browser-dynamic": "^10.0.0",
+    "@angular/router": "^10.0.0",
+    "@auth0/angular-jwt": "^4.2.0",
+    "@ngneat/until-destroy": "^7.3.1",
+    "@stomp/stompjs": "^5.4.4",
+    "bootstrap": "^4.5.0",
+    "core-js": "^3.6.5",
+    "lodash": "^4.17.15",
+    "rxjs": "^6.6.0",
+    "zone.js": "^0.10.3"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.1000.1",
+    "@angular/cli": "^10.0.0",
+    "@angular/compiler-cli": "^10.0.0",
+    "@angular/language-service": "^10.0.0",
+    "@types/jasmine": "^3.5.11",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/lodash": "^4.14.157",
+    "@types/node": "^14.0.18",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.2",
+    "karma": "^5.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.6"
+  }
 }
