upgrade spring and gradle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/nightmanager
+spring.datasource.url=jdbc:postgresql://localhost:5432/nightmanager
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
 logging.level.root=info
