--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,19 @@
 import org.gradle.internal.os.OperatingSystem;
 
 buildscript {
-    repositories {
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
     dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.3.1.RELEASE'
-        classpath "com.github.node-gradle:gradle-node-plugin:2.2.4"
         classpath "com.github.ben-manes:gradle-versions-plugin:0.28.0"
     }
 }
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'idea'
+
+plugins {
+    id 'java'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.0.0'
+    id "com.github.node-gradle.node" version "3.5.0"
+    id "com.github.ben-manes.versions" version "0.44.0"
+}
+
 apply plugin: 'com.github.node-gradle.node'
 apply plugin: "com.github.ben-manes.versions"
 
@@ -24,14 +22,14 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE')
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.1.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-websocket:2.3.1.RELEASE'
-    implementation 'org.postgresql:postgresql:42.2.8'
-    compile 'org.springframework.boot:spring-boot-starter-security:2.3.1.RELEASE'
-    compile 'com.google.guava:guava:29.0-jre'
-    compile("io.jsonwebtoken:jjwt:0.9.1")
-    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.postgresql:postgresql:42.5.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'com.google.guava:guava:31.1-jre'
+    implementation("io.jsonwebtoken:jjwt-api:0.11.5")
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
 }
 
 node {
