--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.5.1'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'com.google.guava:guava:31.1-jre'
-    implementation("io.jsonwebtoken:jjwt-api:0.11.5")
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
 }
 
@@ -38,7 +40,7 @@ node {
 }
 
 processResources {
-    dependsOn 'buildAngular'
+//    dependsOn 'buildAngular'
     from("$projectDir/src/main/angular/dist/nightmanager") {
         into "static"
     }
