--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
@@ -10,47 +11,36 @@
     "lint": "ng lint",
     "postinstall": "ngcc"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
-    "@auth0/angular-jwt": "^4.2.0",
-    "@ngneat/until-destroy": "^7.3.1",
-    "@stomp/stompjs": "^5.4.4",
-    "bootstrap": "^4.5.0",
-    "core-js": "^3.6.5",
-    "lodash": "^4.17.15",
-    "rxjs": "^6.6.0",
-    "zone.js": "^0.10.3"
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.1",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
+    "@auth0/angular-jwt": "^5.1.0",
+    "@ngneat/until-destroy": "^9.2.2",
+    "@stomp/rx-stomp": "^1.2.0",
+    "@stomp/stompjs": "^6.1.2",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.19",
-    "@angular/cli": "^11.2.19",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
-    "@types/jasmine": "^3.5.11",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/lodash": "^4.14.157",
-    "@types/node": "^14.0.18",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^7.0.0",
-    "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
-    "typescript": "^4.1.6"
+    "@angular-devkit/build-angular": "^15.0.2",
+    "@angular/cli": "~15.0.2",
+    "@angular/compiler-cli": "^15.0.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.8.2"
   }
 }
