--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ plugins {
     id 'org.springframework.boot' version '3.0.0'
     id "com.github.node-gradle.node" version "3.5.0"
     id "com.github.ben-manes.versions" version "0.44.0"
+    id 'org.graalvm.buildtools.native' version '0.9.18'
 }
 
 apply plugin: 'com.github.node-gradle.node'
@@ -40,7 +41,7 @@ node {
 }
 
 processResources {
-//    dependsOn 'buildAngular'
+    dependsOn 'buildAngular'
     from("$projectDir/src/main/angular/dist/nightmanager") {
         into "static"
     }
