--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'com.twilio.sdk:twilio:9.14.0'
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
