add display config

--- a/src/main/angular/tsconfig.json
+++ b/src/main/angular/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
+    "module": "ES2022",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2022",
