--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -12,35 +12,37 @@
     "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/animations": "^15.0.0",
+    "@angular/animations": "^16.2.11",
     "@angular/cdk": "^15.0.1",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
+    "@angular/common": "^16.2.11",
+    "@angular/compiler": "^16.2.11",
+    "@angular/core": "^16.2.11",
+    "@angular/forms": "^16.2.11",
     "@angular/material": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/platform-browser": "^16.2.11",
+    "@angular/platform-browser-dynamic": "^16.2.11",
+    "@angular/router": "^16.2.11",
     "@auth0/angular-jwt": "^5.1.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@stomp/rx-stomp": "^1.2.0",
     "@stomp/stompjs": "^6.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.2",
-    "@angular/cli": "~15.0.2",
-    "@angular/compiler-cli": "^15.0.0",
+    "@angular-devkit/build-angular": "^16.2.8",
+    "@angular/cli": "~16.2.8",
+    "@angular/compiler-cli": "^16.2.11",
     "@types/jasmine": "~4.3.0",
+    "daisyui": "^3.9.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.2"
+    "tailwindcss": "^3.3.5",
+    "typescript": "~5.1.6"
   }
 }
