improve nightmanager for the tournament 2024

--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,9 @@ buildscript {
 plugins {
     id 'java'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.springframework.boot' version '3.0.0'
+    id 'org.springframework.boot' version '3.4.0'
     id "com.github.node-gradle.node" version "3.5.0"
     id "com.github.ben-manes.versions" version "0.44.0"
-    id 'org.graalvm.buildtools.native' version '0.9.18'
 }
 
 apply plugin: 'com.github.node-gradle.node'
@@ -31,6 +30,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'com.twilio.sdk:twilio:9.14.0'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
