--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -8,25 +8,27 @@
     "build": "ng build",
     "pree2e": "webdriver-manager update --versions.chrome=2.36 --standalone false --gecko false",
     "e2e": "echo no e2e tests",
-    "lint": "ng lint",
-    "postinstall": "ngcc"
+    "lint": "ng lint"
   },
   "dependencies": {
     "@angular/animations": "^16.2.11",
-    "@angular/cdk": "^15.0.1",
+    "@angular/cdk": "^16.0.1",
     "@angular/common": "^16.2.11",
     "@angular/compiler": "^16.2.11",
     "@angular/core": "^16.2.11",
     "@angular/forms": "^16.2.11",
-    "@angular/material": "^15.0.0",
+    "@angular/material": "^16.0.0",
     "@angular/platform-browser": "^16.2.11",
     "@angular/platform-browser-dynamic": "^16.2.11",
     "@angular/router": "^16.2.11",
+    "@angular/service-worker": "16.2.11",
     "@auth0/angular-jwt": "^5.1.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@stomp/rx-stomp": "^1.2.0",
     "@stomp/stompjs": "^6.1.2",
+    "onesignal-ngx": "^2.0.1",
     "rxjs": "~7.5.0",
+    "tocktimer": "^1.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
   },
