--- a/src/main/angular/tsconfig.json
+++ b/src/main/angular/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "./",
     "outDir": "./dist/nightmanager",
     "sourceMap": true,
+    "esModuleInterop": true,
     "declaration": false,
     "moduleResolution": "node",
     "module": "ES2022",
