--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -26,6 +26,7 @@
     "@ngneat/until-destroy": "^9.2.2",
     "@stomp/rx-stomp": "^1.2.0",
     "@stomp/stompjs": "^6.1.2",
+    "@tailwindcss/postcss": "^4.1.17",
     "onesignal-ngx": "^2.3.0",
     "rxjs": "~7.5.0",
     "tocktimer": "^1.1.1",
@@ -37,14 +38,14 @@
     "@angular/cli": "~19.2.19",
     "@angular/compiler-cli": "^19.2.17",
     "@types/jasmine": "~4.3.0",
-    "daisyui": "^3.9.4",
+    "daisyui": "^5.5.8",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.8.3"
   }
 }
