--- a/src/main/angular/tsconfig.json
+++ b/src/main/angular/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "declaration": false,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "module": "ES2022",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
